[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/actors/enemy/enemy_core.gd" type="Script" id=1]
[ext_resource path="res://src/actors/enemy/states/walk.gd" type="Script" id=2]
[ext_resource path="res://src/actors/enemy/states/attack.gd" type="Script" id=3]
[ext_resource path="res://src/actors/enemy/states/idle.gd" type="Script" id=4]
[ext_resource path="res://src/actors/state_machine.gd" type="Script" id=6]
[ext_resource path="res://src/actors/enemy/states/die.gd" type="Script" id=8]

[node name="EnemyCore" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioTween" type="Tween" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[connection signal="tween_completed" from="AudioTween" to="." method="_on_AudioTween_tween_completed"]
